<resources>
    <string name="app_name">Daily insperation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="interesting">interesting</string>
    <string name="reels">Reels</string>
    <string name="profile">profile</string>
    <string name="title">Title</string>
    <string name="desc">desc</string>
    <string name="skip">пропустить</string>
    <string name="get_started">Далее</string>
    <string name="logo_name">𝓓𝓘</string>
    <string name="notification">Уведомление</string>
    <string name="favorite">Избранные</string>
    <string name="question">Вопросы o</string>
    <string name="daily_inspiration">Daily inspiration</string>
    <string name="daily">Daily</string>
    <string name="inspiration">Inspiration</string>
    <string name="_notification">notification</string>
    <string name="exit">Выйти из аккаунта</string>
    <string name="category_motivation">Мотивацион\n-ные</string>
    <string name="category_love">Любовь</string>
    <string name="category_life">Жизнь</string>
    <string name="category_smile">Смешные</string>
    <string name="redactor_profile">Редактирование профиля</string>
    <string name="sign_in">Вход</string>
    <string name="username">логин</string>
    <string name="password">пароль</string>
    <string name="helptxt_username">Введите логин</string>
    <string name="helptxt_password">Введите пароль</string>
    <string name="signin">Войти</string>
    <string name="google">Google</string>
    <string name="apple">Apple</string>
    <string name="facebook">Facebook</string>
    <string name="no_account">Ещё нет аккаунта?</string>
    <string name="register">Зарегистрироваться</string>
    <string name="register_txt">Регистрация</string>
    <string name="email">email</string>
    <string name="helptxt_email">введите почту</string>
    <string name="confirm_password">подтвердить пароль</string>
    <string name="helptxt_confirm_password">Введите пароль ещё раз</string>
    <string name="yes_account">У вас уже есть аакаунт?</string>
</resources>